--- a/datenschutz.html
+++ b/datenschutz.html
@@ -52,16 +52,17 @@
       <!--Hier beginnt der Mainteil der Website-->
 
       <div class="datenschutz">
-        <p><strong>Datenschutzerklärung</strong></p>
+        <h1>Datenschutz</h1>
+        <hr>
         <p>
         <p>In dieser Datenschutzerklärung informieren wir Sie über die Verarbeitung personenbezogener Daten bei der Nutzung dieser Website.</p>
-        <p><strong>Verantwortlicher</strong></p>
+        <p><br>Verantwortlicher</br></p>
         <p>Verantwortlich für die Datenverarbeitung ist<br><em>Name, Adresse, Telefonnummer und E-Mail-Adresse des Websitebetreibers ergänzen</em></p>
-        <p><strong>Personenbezogene Daten</strong></p>
+        <p><br>Personenbezogene Daten</br></p>
         <p>Personenbezogene Daten sind alle Informationen, die sich auf eine identifizierte oder identifizierbare natürliche Person (im Folgenden "betroffene Person") beziehen. Als identifizierbar wird eine natürliche Person angesehen, die direkt
           oder indirekt, insbesondere mittels Zuordnung zu einer Kennung wie einem Namen, zu einer Kennnummer, zu Standortdaten, zu einer Online-Kennung oder zu einem oder mehreren besonderen Merkmalen identifiziert werden kann, die Ausdruck der
           physischen, physiologischen, genetischen, psychischen, wirtschaftlichen, kulturellen oder sozialen Identität dieser natürlichen Person sind.</p>
-        <p><strong>Daten beim Websiteaufruf</strong></p>
+        <p><br>Daten beim Websiteaufruf</br></p>
         <p>Wenn Sie diese Website nur nutzen, um sich zu informieren und keine Daten angeben, dann verarbeiten wir nur die Daten, die zur Anzeige der Website auf dem von Ihnen verwendeten internetfähigen Gerät erforderlich sind. Das sind
           insbesondere:</p>
         <ul>
@@ -74,7 +75,7 @@
         </ul>
         <p>Rechtsgrundlage für die Verarbeitung dieser Daten sind berechtigte Interessen gemäß Art. 6 Abs. 1 UAbs. 1 Buchstabe f) DSGVO, um die Darstellung der Website grundsätzlich zu ermöglichen.</p>
         <p>Darüber hinaus können Sie verschiedene Leistungen auf der Website nutzen, bei der weitere personenbezogene und nicht personenbezogene Daten verarbeitet werden.</p>
-        <p><strong>Ihre Rechte</strong></p>
+        <p><br>Ihre Rechte</br></p>
         <p>Als betroffene Person haben Sie folgende Rechte:</p>
         <ul>
           <li>Sie haben ein Auskunftsrecht bezüglich der Sie betreffenden personenbezogenen Daten, die der Verantwortliche verarbeitet (Art. 15 DSGVO),</li>
@@ -90,7 +91,7 @@
         </ul>
         <p><br></p>
         </p>
-        <p><strong>Einsatz von Cookies&nbsp;</strong></p>
+        <p><br>Einsatz von Cookies&nbsp;</br></p>
         <p>
         <p>Beim Besuch der Website können Cookies auf Ihrem Gerät gespeichert werden. Cookies sind kleine Textdateien, die von dem von Ihnen verwendeten Browser gespeichert werden. Cookies können keine Programme ausführen und auch keine Viren auf Ihr
           Gerät übertragen. Die Stelle, die den Cookie setzt, kann darüber jedoch bestimmte Informationen erhalten. Cookies dienen dazu, das Internetangebot benutzerfreundlicher zu machen. Mithilfe von Cookies kann beispielsweise das Gerät, mit dem
@@ -99,14 +100,14 @@
           das Blockieren sind jedoch möglicherweise nicht mehr alle Funktionen dieser Website nutzbar. Im weiteren Text dieser Datenschutzerklärung informieren wir Sie konkret, an welchen Stellen und zu welchen Zwecken Cookies auf den Seiten zum
           Einsatz kommen.</p>
         </p>
-        <p><strong>Datenschutzerklärung für Facebook</strong></p>
+        <p><br>Datenschutzerklärung für Facebook</br></p>
         <p>Diese Website verwendet Social-Media-Funktionen von Facebook Inc., 1601 S. California Ave, Palo Alto, CA 94304, USA. Über darauf eingebundene Facebook-Like-Schaltflächen – Facebook-Like-Button – können Sie Inhalte im sozialen Netzwerk von
           Facebook teilen. Rechtsgrundlage für die Verarbeitung der Daten ist Art. 6 Abs. 1 UAbs. 1 Buchstabe f) DSGVO das berechtigte Interesse an der Optimierung des Websiteangebots. Bei Aufruf einer Seite mit integriertem Facebook-Like-Button wird
           grundsätzlich eine Verbindung zwischen dem verwendeten Browser und den Servern von Facebook aufgebaut. Um diese sofortige Verbindung zu unterbinden, verwendet diese Website eine Lösung, bei der diese Übertragung erst mit Betätigen des
           Facebook-Like-Buttons stattfindet. Erst beim zweiten Betätigen des Facebook-Like-Buttons werden Daten an Facebook übertragen. Besitzen Sie einen Facebook-Account, können diese Daten mit diesem verknüpft werden. Wenn Sie keine Zuordnung
           dieser Daten zu Ihrem Facebook-Account wünschen, loggen Sie sich daher bitte vor dem Besuch unserer Seite bei Facebook aus und löschen Sie die Cookies in Ihrem Browser. Facebook hat sich dem Datenschutzabkommen „Privacy Shield“ zwischen der
           USA und der EU unterworfen. Mehr zum Datenschutz von Facebook erfahren Sie unter <a href="https://de-de.facebook.com/privacy/explanation">https://de-de.facebook.com/privacy/explanation</a>.</p>
-        <p><strong>Datenschutzerklärung für Twitter</strong></p>
+        <p><br>Datenschutzerklärung für Twitter</br></p>
         <p>Diese Website verwendet Social-Media-Funktionen von Twitter, Inc., 1355 Market St, Suite 900, San Francisco, CA 94103, USA. Über darauf eingebundene Twitter-Schaltflächen – Tweet-Button – können Sie Inhalte im sozialen Netzwerk von Twitter
           teilen. Rechtsgrundlage für die Verarbeitung der Daten ist Art. 6 Abs. 1 UAbs. 1 Buchstabe f) DSGVO das berechtigte Interesse an der Optimierung des Websiteangebots. Bei Aufruf einer Seite mit integriertem Tweet-Button wird grundsätzlich
           eine Verbindung zwischen dem verwendeten Browser und den Servern von Twitter aufgebaut. Um diese sofortige Verbindung zu unterbinden, verwendet diese Website eine Lösung, bei der diese Übertragung erst mit Betätigen des Tweet-Buttons
