--- a/Kontakt.html
+++ b/Kontakt.html
@@ -149,7 +149,7 @@
                 </div>
 
                 <div class="form-group">
-                  <label>Ihr Anliegen *</label>
+                  <label>Ihre Nachricht *</label>
                   <div class="input">
                     <textarea class="form-control" name="textarea_name" placeholder="" required="required" style="height: 20%;"></textarea>
                   </div>
