--- a/datenschutz.html
+++ b/datenschutz.html
@@ -57,7 +57,7 @@
         <p>
         <p>In dieser Datenschutzerklärung informieren wir Sie über die Verarbeitung personenbezogener Daten bei der Nutzung dieser Website.</p>
         <p><br>Verantwortlicher</br></p>
-        <p>Verantwortlich für die Datenverarbeitung ist<br><em>Name, Adresse, Telefonnummer und E-Mail-Adresse des Websitebetreibers ergänzen</em></p>
+        <p>Verantwortlich für die Datenverarbeitung ist<br><em>Maximilian Rampp, Marienstraße 20, 89518 Heidenheim, 0152/555666777 und maximilian.rampp@bikes.de des Websitebetreibers ergänzen</em></p>
         <p><br>Personenbezogene Daten</br></p>
         <p>Personenbezogene Daten sind alle Informationen, die sich auf eine identifizierte oder identifizierbare natürliche Person (im Folgenden "betroffene Person") beziehen. Als identifizierbar wird eine natürliche Person angesehen, die direkt
           oder indirekt, insbesondere mittels Zuordnung zu einer Kennung wie einem Namen, zu einer Kennnummer, zu Standortdaten, zu einer Online-Kennung oder zu einem oder mehreren besonderen Merkmalen identifiziert werden kann, die Ausdruck der
