--- a/Über uns.html
+++ b/Über uns.html
@@ -65,6 +65,8 @@
 
           <p> Durch die hohe Exptertise, welche im Unternehmen von Anfang an vorhanden war, konnten wir schnell Erfolge erzielen. Da unseren Idee schnell in der Bekannschaft und beim lokalen Fahrradhändler des Vertrauens rasch guten Anklang fand,
             haben wir uns bei der TV-Show, die Höhle der Löwen beworben. Auch hier hat unsere Idee die Neugier der Investoren geweckt. Durch die weitere Unterstützung konnten wir unser Produkt weiter verbessern und nun sehen Sie das fertige und
+            haben wir uns bei der TV-Show, die Höhle der Löwen beworben. Auch hier hat unsere Idee die Neugier der Investoren geweckt. Durch die weitere Unterstützung konnten wir unseren Traum zur Wirklichkeit machen und das Produkt weiter
+            verbessern. Nach der Höhle der Löwen erfolgte die Gründung unsere Firma. Nach weiteren Monaten und der Hilfe der Löwen konnten wir unser Produkt so fertistellen wie wir es wollten und Sie es verdienen. Hier sehen Sie das fertige und
             erprobte Produkt, welches wir Ihnen voller Stolz anbieten können.</p>
 
           <p>Aber nun genug der Worte, damit Sie ein Bild zu uns haben, werden wir uns kurz Ihnen vorstellen.</p>
