--- a/Kontakt.html
+++ b/Kontakt.html
@@ -3,6 +3,8 @@
 <html lang="de" dir="ltr">
 
 <head>
+  <link rel="icon" type="Logo.png" href="Logo.ico">
+  <link rel="icon" type="Logo.png" href="https://www.index.html/Logo.png"/>
   <title>Kontakt - Pendix</title>
   <link rel="stylesheet" href="style.css">
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
